# stega

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  NEWS.md  README.md  TODO.md  docker-compose.yaml  docker-compose.yml  external.Dockerfile  hypercorn.access  hypercorn.error  ingest.Dockerfile  package-lock.json  pyproject.toml  tasks.py
config/: __init__.py  base.py  config.py  frozen.py
stega/stega_cli/: pyproject.toml
stega/stega_cli/src/stega_cli/: __init__.py  config.py  daemon.py  entrypoint.py
stega/stega_cli/src/stega_cli/cli/: entrypoint.py  events.py  portfolio.py  systemd.py  utils.py
stega/stega_cli/src/stega_cli/daemon/: server.py
stega/stega_cli/src/stega_cli/domain/: command.py  portfolio.py  request.py
stega/stega_cli/src/stega_cli/ports/: __init__.py  actions.py  db.py  portfolio.py
stega/stega_cli/src/stega_cli/services/: command.py  dispatcher.py  handlers.py  request.py
stega/stega_cli/src/stega_cli/services/handlers/: mapping.py  portfolio.py  sse.py
stega/stega_config/: pyproject.toml
stega/stega_config/src/stega_config/: __init__.py  frozen.py  source.py
stega/stega_contracts/: pyproject.toml
stega/stega_contracts/src/stega_contracts/: portfolio.py
stega/stega_contracts/src/stega_contracts/portfolio/: __init__.py  command.py  event.py  port.py  query.py  routes.py  view.py
stega/stega_core/: Dockerfile  docker-compose.yaml  pyproject.toml
stega/stega_core/src/stega_core/: __init__.py  bootstrap.py  bus.py  config.py  context.py  di.py  entrypoint.py  event.py  logging.py  query.py  response.py
stega/stega_core/src/stega_core/adapters/: __init__.py
stega/stega_core/src/stega_core/adapters/events/: listen.py
stega/stega_core/src/stega_core/adapters/rest/: api.py  app.py  sse.py  utils.py
stega/stega_core/src/stega_core/broker/: __init__.py  base.py  memory.py  rabbitmq.py
stega/stega_core/src/stega_core/domain/: __init__.py  aggregate.py  commands.py  error.py  errors.py  portfolio.py
stega/stega_core/src/stega_core/domain/repo/: base.py  sqlalchemy.py
stega/stega_core/src/stega_core/domain/repos/: base.py  memory.py
stega/stega_core/src/stega_core/domain/uow/: base.py  sqlalchemy.py
stega/stega_core/src/stega_core/hosting/: __init__.py  hypercorn.py  marshal.py  quart.py
stega/stega_core/src/stega_core/infra/: http.py
stega/stega_core/src/stega_core/message/: __init__.py  command.py  event.py  query.py  response.py
stega/stega_core/src/stega_core/messaging/: __init__.py  bus.py
stega/stega_core/src/stega_core/ports/: base.py  http.py
stega/stega_core/src/stega_core/query_context/: __init__.py  base.py  sqlalchemy.py
stega/stega_core/src/stega_core/reader/: __init__.py  base.py  sqlalchemy.py
stega/stega_core/src/stega_core/registry/: __init__.py  action.py  base.py  message.py  reader.py  repo.py  repository.py
stega/stega_core/src/stega_core/repository/: __init__.py  base.py  memory.py  sqlalchemy.py
stega/stega_core/src/stega_core/service/: __init__.py  channel.py  contract.py  http.py  memory.py  port.py  portfolio.py  spec.py  transport.py
stega/stega_core/src/stega_core/services/: __init__.py  messagebus.py
stega/stega_core/src/stega_core/services/handlers/: __init__.py  events.py  mapping.py  portfolio.py  streams.py
stega/stega_core/src/stega_core/streams/: base.py  memory.py
stega/stega_core/src/stega_core/transport/: base.py  rabbitmq.py
stega/stega_core/src/stega_core/uow/: __init__.py  base.py  sqlalchemy.py
stega/stega_edge/: Dockerfile  docker-compose.yaml  pyproject.toml
stega/stega_edge/src/stega_core/: bootstrap.py  config.py  entrypoint.py
stega/stega_edge/src/stega_core/adapters/rest/: api.py  app.py  sse.py
stega/stega_edge/src/stega_core/domain/: __init__.py  queries.py
stega/stega_edge/src/stega_core/ports/: __init__.py  base.py
stega/stega_edge/src/stega_core/services/handlers/: portfolio.py
stega/stega_edge/src/stega_edge/: bootstrap.py  config.py  entrypoint.py
stega/stega_edge/src/stega_edge/adapters/rest/: api.py  app.py  sse.py  utils.py
stega/stega_edge/src/stega_edge/domain/: command.py  portfolio.py
stega/stega_edge/src/stega_edge/ports/: base.py  http.py
stega/stega_edge/src/stega_edge/services/handlers/: __init__.py  portfolio.py
stega/stega_lib/: pyproject.toml
stega/stega_lib/src/stega_lib/: __init__.py  di.py  domain.py  events.py  http.py  registry.py
stega/stega_lib/src/stega_lib/core/: command.py  event.py  query.py  response.py
stega/stega_lib/src/stega_lib/domain/: aggregate.py  entity.py
stega/stega_lib/src/stega_lib/infra/: pubsub.py
stega/stega_lib/src/stega_lib/messaging/: __init__.py  bus.py  types.py
stega/stega_lib/src/stega_lib/streams/: base.py  memory.py
stega/stega_lib/src/stega_lib/transport/: base.py  rabbitmq.py
stega/stega_portfolio/: Dockerfile  Dockerfile.events  docker-compose.yaml  pyproject.toml
stega/stega_portfolio/alembic/: __init__.py  env.py
stega/stega_portfolio/alembic/versions/: 91c71382362b_initial_database_creation.py  __init__.py
stega/stega_portfolio/src/.portfolio/: stega_portfolio.db
stega/stega_portfolio/src/stega_portfolio/: __init__.py  bootstrap.py  config.py  entrypoint.py
stega/stega_portfolio/src/stega_portfolio/adapters/: __init__.py
stega/stega_portfolio/src/stega_portfolio/adapters/events/: listen.py
stega/stega_portfolio/src/stega_portfolio/adapters/rest/: __init__.py  api.py  app.py  health.py  utils.py
stega/stega_portfolio/src/stega_portfolio/domain/: __init__.py  command.py  commands.py  error.py  errors.py  portfolio.py  query.py
stega/stega_portfolio/src/stega_portfolio/ports/: __init__.py  orm.py
stega/stega_portfolio/src/stega_portfolio/ports/events/: publish.py
stega/stega_portfolio/src/stega_portfolio/services/: __init__.py  messagebus.py
stega/stega_portfolio/src/stega_portfolio/views/: portfolio.py  views.py
stega/stega_portfolio/tests/: __init__.py
stega/stega_portfolio/tests/unit/: __init__.py  conftest.py  test_portfolio.py
stega/stega_utils/: pyproject.toml
stega/stega_utils/src/stega_utils/: http.py
(+43 files in other folders)
