[project]
name = "stega"
version = "0.1.0"
description = "Application for portfolio management & investment analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "stega/stega_core",
    "stega/stega_portfolio",
    "stega/stega_lib",
    "stega/stega_config",
]

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "ruff>=0.12.4",
]

[tool.ruff]
line-length = 120
extend-exclude = [
    "tasks.py", 
    "tests",
    "stega_lib",
    "stega_core",
    "stega_config",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",
    "D213",
]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["T"]

[tool.ruff.lint.pydocstyle]
convention = "google"