[project]
authors = [{ name = "Eric Simpson", email = "eric.gr.simpson@gmail.com" }]
name = "stega_cli"
requires-python = ">=3.12"
version = "0.1.0"
description = "CLI tool for stega application"
dependencies = []

[tool.stega]
service = false

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[tool.uv.sources]
stega_lib = { workspace = true }
stega_config = { workspace = true }
