[project]
authors = [{ name = "Eric Simpson", email = "eric.gr.simpson@gmail.com" }]
name = "stega_contracts"
requires-python = ">=3.12"
version = "0.1.0"
description = "Messaging contracts for all stega services"
dependencies = [
    "stega_config",
    "stega_core",
]

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[tool.uv.sources]
stega_core = { workspace = true }
stega_config = { workspace = true }
