[project]
authors = [{ name = "Eric Simpson", email = "eric.gr.simpson@gmail.com" }]
name = "stega_core"
requires-python = ">=3.12"
version = "0.1.0"
description = "Core business logic microservice for Stega application"
dependencies = ["stega_lib"]

[tool.stega]
service = true

[project.scripts]
serve = "stega_portfolio.entrypoint:run"

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[tool.uv.sources]
stega_lib = { workspace = true }
