[project]
authors = [{ name = "Eric Simpson", email = "eric.gr.simpson@gmail.com" }]
name = "stega_core"
requires-python = ">=3.12"
version = "0.1.0"
description = "Common core for all stega services"
dependencies = [
    "aio-pika>=9.6.2",
    "httpx>=0.28.1",
    "sqlalchemy[asyncio]>=2.0.43",
]

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"
