[project]
authors = [{ name = "Eric Simpson", email = "eric.gr.simpson@gmail.com" }]
name = "stega_edge"
requires-python = ">=3.12"
version = "0.1.0"
description = "Boundary services for stega application"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "hypercorn>=0.18.0",
    "pika>=1.3.2",
    "quart>=0.20.0",
    "stega_config",
    "stega_core",
]

[tool.stega]
service = true

[project.scripts]
serve-core = "stega_edge.entrypoint:run"

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[tool.uv.sources]
stega_core = { workspace = true }
stega_config = { workspace = true }
