[project]
authors = [{ name = "Eric Simpson", email = "eric.gr.simpson@gmail.com" }]
name = "stega_edge"
requires-python = ">=3.12"
version = "0.1.0"
description = "Boundary services for stega application"
dependencies = [
    "hypercorn>=0.18.0",
    "quart>=0.20.0",
    "stega_config",
    "stega_core",
    "stega_utils",
]

[tool.stega]
service = true

[project.scripts]
serve-edge = "stega_edge.entrypoint:run_rest_app"

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[tool.uv.sources]
stega_config = { workspace = true }
stega_core = { workspace = true }
stega_utils = { workspace = true }
