[project]
authors = [{ name = "Eric Simpson", email = "eric.gr.simpson@gmail.com" }]
name = "stega_lib"
requires-python = ">=3.12"
version = "0.1.0"
description = "Common library for stega application"
dependencies = [
    "httpx>=0.28.1",
    "uuid-utils>=0.11.0",
]

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"
