[project]
authors = [{ name = "Eric Simpson", email = "eric.gr.simpson@gmail.com" }]
name = "stega_utils"
requires-python = ">=3.12"
version = "0.1.0"
description = "Common utilities for all stega services"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"
